// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphHelpers getChartDomain should return expected y domain for given inputs 1`] = `
Object {
  "empty array": Array [
    0,
    10,
  ],
  "maxY = 0": Array [
    0,
    10,
  ],
  "maxY = 100": Array [
    0,
    1000,
  ],
  "maxY = 1000": Array [
    0,
    10000,
  ],
  "maxY = 49": Array [
    0,
    50,
  ],
  "maxY = 50": Array [
    0,
    100,
  ],
  "maxY = 9": Array [
    0,
    10,
  ],
}
`;

exports[`GraphHelpers should convert graph data and generate tooltips when usage is populated: usage populated 1`] = `
Object {
  "chartData": Array [
    Object {
      "label": "5 sockets on Jun 1",
      "x": "Jun 1",
      "y": 5,
    },
    Object {
      "label": "7 sockets on Jun 2
 +2 from previous day",
      "x": "Jun 2",
      "y": 7,
    },
    Object {
      "label": "3 sockets on Jun 3
 -4 from previous day",
      "x": "Jun 3",
      "y": 3,
    },
    Object {
      "label": "0 sockets on Jun 4
 -3 from previous day",
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "label": "0 sockets on Jun 5",
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if error: error is true 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
}
`;

exports[`GraphHelpers should convert graph data and return zeroed usage array if usage is empty: zeroed array 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
}
`;

exports[`GraphHelpers should convert graph data and returned zeroed array when usage throws error: throws error 1`] = `
Object {
  "chartData": Array [
    Object {
      "x": "Jun 1",
      "y": 0,
    },
    Object {
      "x": "Jun 2",
      "y": 0,
    },
    Object {
      "x": "Jun 3",
      "y": 0,
    },
    Object {
      "x": "Jun 4",
      "y": 0,
    },
    Object {
      "x": "Jun 5",
      "y": 0,
    },
  ],
  "chartDomain": Object {
    "x": Array [
      0,
      31,
    ],
    "y": Array [
      0,
      10,
    ],
  },
}
`;

exports[`GraphHelpers should have specific functions: graphHelpers 1`] = `
Object {
  "chartDateFormat": "MMM D",
  "convertGraphUsageData": [Function],
  "getChartDomain": [Function],
  "getGraphHeight": [Function],
  "getTooltipDimensions": [Function],
  "getTooltipFontSize": [Function],
  "zeroedUsageData": [Function],
}
`;

exports[`GraphHelpers should match graph heights at all breakpoints: lg graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: md graph height 1`] = `400`;

exports[`GraphHelpers should match graph heights at all breakpoints: sm graph height 1`] = `400`;

exports[`GraphHelpers should match graph heights at all breakpoints: xl graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: xl2 graph height 1`] = `200`;

exports[`GraphHelpers should match graph heights at all breakpoints: xs graph height 1`] = `400`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: lg tooltip dimensions 1`] = `
Object {
  "height": 40,
  "width": 120,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: md tooltip dimensions 1`] = `
Object {
  "height": 40,
  "width": 140,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: sm tooltip dimensions 1`] = `
Object {
  "height": 50,
  "width": 180,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xl tooltip dimensions 1`] = `
Object {
  "height": 30,
  "width": 90,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xl2 tooltip dimensions 1`] = `
Object {
  "height": 20,
  "width": 80,
}
`;

exports[`GraphHelpers should match tooltip dimensions at all breakpoints: xs tooltip dimensions 1`] = `
Object {
  "height": 60,
  "width": 200,
}
`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: lg tooltip font sizes 1`] = `12`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: md tooltip font sizes 1`] = `14`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: sm tooltip font sizes 1`] = `14`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xl tooltip font sizes 1`] = `8`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xl2 tooltip font sizes 1`] = `8`;

exports[`GraphHelpers should match tooltip font sizes at all breakpoints: xs tooltip font sizes 1`] = `14`;
